<resources>
    <string name="app_name">Integratieproject</string>
    <string name="txtProjectName">Project name</string>
    <string name="txtLikes">502</string>
    <string name="txtComments">183</string>
    <string name="txtShares">16</string>
    <string name="txtDescription">Description</string>
    <string name="txtHome">Home</string>
    <string name="txtSearch">Search</string>
    <string name="txtSearch2">Search:</string>
    <string name="txtProfile">Profile</string>
    <string name="txtProgress">Progress:</string>
    <string name="txtIdeations">Ideations</string>
    <string name="txtQuestionnaires">Questionnaires</string>
    <string name="txtStartDate">StartDate</string>
    <string name="txtEndDate">EndDate</string>
    <string name="txtEmailInput">Email:</string>
    <string name="txtPasswordInput">Password:</string>
    <string name="txtLoginTitle">Login with your credentials</string>
    <string name="txtLogin">Login</string>
    <string name="txtRegister">Register</string>
    <string name="txtFirstName">First name:</string>
    <string name="txtLastName">Last name:</string>
    <string name="txtAge">Age:</string>
    <string name="txtPostalCode">¨Postal code:</string>
    <string name="txtPlace">Place:</string>
    <string name="txtSex">Sex:</string>
    <string name="txtTitleQuestion">Question title</string>
    <string name="txtIdeationTitle">Ideation title</string>
    <string name="txtShowIdeas"><u>Show Ideas</u></string>
    <string name="txtSubmit">Submit</string>
    <string name="txtNoAccountYet">
        <u>No account yet?</u>
    </string>
    <string name="txtQuestionnaireName">Questionnaire name</string>
    <string name="txtFillIn">
        <u>Fill in</u>
    </string>
    <string name="txtQuestions">Questions</string>
    <string name="txtIdeas">Ideas</string>

    <string name="GenderM">M</string>
    <string name="GenderF">F</string>
    <string name="GenderX">X</string>

    <string-array name="GenderList">
        <item>@string/GenderM</item>
        <item>@string/GenderF</item>
        <item>@string/GenderX</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

