<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".fragments.ProjectFragment">
    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="match_parent">
        <TextView
                android:text="@string/txtProjectName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:id="@+id/tvProjectTitle"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.449" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/ivProjectImage"/>
        <TextView
                android:textAlignment="center"
                android:text="@string/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:id="@+id/tvProjectDescription" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvProjectTitle" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"/>
        <ImageView
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="183dp" tools:srcCompat="@tools:sample/backgrounds/scenic"
                android:id="@+id/ivProjectImage" android:layout_marginTop="0dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="0dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="0dp"/>
        <TextView
                android:text="@string/txtProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#000000"
                android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvProjectDescription"/>
        <TextView
                android:text="@string/txtQuestionnaires"
                android:layout_width="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView4"/>
        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
        <TextView
                android:text="@string/txtStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/progressBar"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/txtEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/progressBar"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>