<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.LoginFragment">


    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

        <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/inputEmailLogin"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle"/>
        <TextView
                android:text="@string/txtLoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:id="@+id/tvLoginTitle" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="80dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:id="@+id/inputPasswordLogin" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/inputEmailLogin"/>
        <TextView
                android:text="@string/txtEmailInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvEmail"
                app:layout_constraintEnd_toStartOf="@+id/inputEmailLogin"
                android:layout_marginEnd="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/inputEmailLogin"/>
        <TextView
                android:text="@string/txtPasswordInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPassword"
                app:layout_constraintBaseline_toBaselineOf="@+id/inputPasswordLogin"
                app:layout_constraintEnd_toStartOf="@+id/inputPasswordLogin" android:layout_marginEnd="8dp"/>
        <Button
                android:text="@string/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnLogin" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/inputPasswordLogin" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <TextView
                android:text="@string/txtNoAccountYet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:id="@+id/tvNoAccountYet" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>