<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:paddingBottom="8dp"
                                             android:layout_height="wrap_content">


    <TextView
            android:text="@string/txtIdeationTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/tvIdeationTitle" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tvShowIdeas"/>
    <TextView
            android:text="@string/txtShowIdeas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvShowIdeas"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/tvIdeationTitle"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/glIdeations" app:layout_constraintGuide_percent="0.5"
                                          android:orientation="vertical"/>
    <TextView
            android:text="@string/txtLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvIdeationLikes" app:layout_constraintEnd_toStartOf="@+id/glIdeations"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvIdeationTitle"/>
    <ImageView
            android:layout_width="19dp"
            android:layout_height="19dp" app:srcCompat="@drawable/heart_symbol"
            android:id="@+id/ivIdeationLikes"
            app:layout_constraintEnd_toStartOf="@+id/tvIdeationLikes" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvIdeationTitle"/>
    <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp" app:srcCompat="@drawable/comment"
            android:id="@+id/ivIdeationComments" android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/tvIdeationTitle"
            app:layout_constraintStart_toStartOf="@+id/glIdeations" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/txtComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvIdeationComments" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvIdeationTitle"
            app:layout_constraintStart_toEndOf="@+id/ivIdeationComments" android:layout_marginStart="8dp"/>

</android.support.constraint.ConstraintLayout>