<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.RegisterFragment">

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

        <TextView
                android:text="@string/txtRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:id="@+id/textView3" android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/vertGuidlineRegister" app:layout_constraintGuide_percent="0.5"
                                              android:orientation="vertical"/>
        <TextView
                android:text="@string/txtFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvFirstNameReg"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/txtLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/tvLastNameReg" android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/vertGuidlineRegister"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/inputFirstNameReg" android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/tvFirstNameReg" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/vertGuidlineRegister"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/inputLastNameReg" android:layout_marginTop="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvLastNameReg"
                app:layout_constraintStart_toStartOf="@+id/vertGuidlineRegister"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:text="@string/txtEmailInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvEmailReg" android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/inputFirstNameReg"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/inputEmailReg" android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/tvEmailReg" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:text="@string/txtPasswordInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView10" android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/inputEmailReg" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/inputPasswordReg" android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/textView10" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:text="@string/txtPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPlace" android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/inputPasswordReg"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/inputPlace" android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/tvPlace" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/vertGuidlineRegister"/>
        <TextView
                android:text="@string/txtPostalCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPostalCode" android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/inputPasswordReg"
                app:layout_constraintStart_toStartOf="@+id/vertGuidlineRegister" android:layout_marginStart="8dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/inputPostalCode" android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/tvPostalCode"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/vertGuidlineRegister"/>
        <TextView
                android:text="@string/txtAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvAge" android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/inputPlace" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/txtSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvSex" android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/inputPostalCode"
                app:layout_constraintStart_toStartOf="@+id/vertGuidlineRegister" android:layout_marginStart="8dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/inputAge" android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/tvAge" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/vertGuidlineRegister"/>
        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/GenderList"
                android:id="@+id/spinGenderReg" android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvSex" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/vertGuidlineRegister"/>
        <Button
                android:text="@string/txtRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnReg" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/inputAge"/>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>